# genlint

./: .gitignore  CHANGELOG.md  Cargo.toml  HELP.md  LICENSE  README.md  build.rs  release-please-config.json
.github/: renovate.json5
.github/workflows/: release-please.yml  release.yml  test.yml
completions/: _genlint  _genlint.ps1  genlint.bash  genlint.fish
man/: genlint.1
src/: args.rs  enums.rs  lib.rs  lint.rs  main.rs  output.rs  types.rs  util.rs
tests/: cli_flags.rs  lint_rules.rs
tests/data/: trailing_spaces.txt
