[package]
name = "genlint"
version = "0.1.0"
edition = "2024"
authors = ["Henry Hsieh <r901042004@gmail.com>"]
description = "A generic, configurable linter for multiple languages"
license = "MIT"
repository = "https://github.com/henry-hsieh/genlint"
readme = "README.md"
build = "build.rs"

[lib]
name = "genlint"
path = "src/lib.rs"

[[bin]]
name = "genlint"
path = "src/main.rs"

[profile.release]
strip = "symbols"
lto = true

[dependencies]
clap = { version = "4.4", features = ["derive"] }
clap_complete = "4.2"
glob = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
annotate-snippets = "0.11.5"
serde-partial = "0.3.1"
unicode-width = "0.2.1"

[dev-dependencies]
annotate-snippets = { version = "0.11.5", features = ["testing-colors"] }
assert_cmd = "2.0"
predicates = "3.0"

[build-dependencies]
clap = { version = "4.4", features = ["derive"] }
clap_complete = "4.2"
clap_mangen = "0.2.29"
